--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,4 @@
 
-<div class="container">
-  <p-card>
-    
-      <h3>CONTROL DE INGRESO</h3>
-    <form *ngIf="carga" >
-      <h4>Seleccione un archivo de excel de su equipo</h4 >
-      <span class="">
-        <input class="inputCarga" type="file" id="file-upload" name="fileUpload" accept=".xls,.xlsx" (change)="cargar($event)">
-      </span>
-      <br>
-      <!-- <p-button type="submit" label="Cargar"></p-button> -->
-    </form>
-    <br>
-    <form *ngIf="!carga" (ngSubmit)="auth()">
-      <span class="p-float-label">
-        <input  [(ngModel)]="dni" type="text" autocomplete="off" pInputText name="dni"> 
-        <label for="float-input">Ingrese un número de DNI</label>        
-      </span>
-      <br>
-      <p-button label="Buscar"  type="submit" icon="pi pi-search"   ></p-button>
-    </form>
-  </p-card>  
-</div>
-<p-toast position="top-center"></p-toast>
 
+<router-outlet></router-outlet>
 
