--- a/src/app/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/admin/pages/dashboard/dashboard.component.html
@@ -5,19 +5,19 @@
     <p-toolbar styleClass="p-mb-4">
         <ng-template pTemplate="right">
             <button pButton pRipple label="Agregar Personal" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
-            <button pButton pRipple icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
+            
         </ng-template>
     </p-toolbar>
 
-    <p-table #dt [value]="personal" [rows]="10" [paginator]="true" [globalFilterFields]="['name','country.name','representative.name','status']" responsiveLayout="scroll"
+    <p-table #dt [value]="personal" [rows]="10" [paginator]="true" [globalFilterFields]="['nombre','apellido', 'jerarquia','codigoEstadistico','destinoHabitual']" responsiveLayout="scroll"
         [(selection)]="selectedProducts" [rowHover]="true" dataKey="id"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+        currentPageReportTemplate="Mostrando {first} a {last} de {totalRecords} entradas" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-ai-center p-jc-between">
-                <h5 class="p-m-0">Control de Personal</h5>
+                <h5 class="p-m-0">LISTADO DEL PERSONAL</h5>
                 <span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" (input)="dt.filterGlobal($event.target, 'contains')" placeholder="Search..." />
+                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Buscar..." />
                 </span>
             </div>
         </ng-template>
@@ -31,6 +31,7 @@
                 <!-- <th>Image</th> -->
                 <th pSortableColumn="jerarquia">Jerarquia <p-sortIcon field="jerarquia"></p-sortIcon></th>
                 <th pSortableColumn="ce">CE <p-sortIcon field="ce"></p-sortIcon></th>
+                <th pSortableColumn="ce">DNI <p-sortIcon field="ce"></p-sortIcon></th>
                 <th pSortableColumn="destino">Destino <p-sortIcon field="destino"></p-sortIcon></th>
                 
                 <th></th>
@@ -46,6 +47,7 @@
                 <td>{{persona.apellido}}</td>
                 <td>{{persona.jerarquia}}</td>
                 <td>{{persona.codigoEstadistico}}</td>
+                <td>{{persona.numeroDni}}</td>
                 <td>{{persona.destinoHabitual}}</td>
                 <!-- <td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td> -->
                 
@@ -63,64 +65,70 @@
     </p-table>
 </div>
 
-<p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Product Details" [modal]="true" styleClass="p-fluid">
+<p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Datos Personales" [modal]="true" styleClass="p-fluid">
     <ng-template pTemplate="content">
         <!-- <img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="product.image" class="product-image" *ngIf="product.image"> -->
-       <!--  <div class="p-field">
-            <label for="name">Name</label>
+        <div class="p-field">
+            <label for="name">Nombre</label>
             <input type="text" pInputText id="name" [(ngModel)]="persona.nombre" required autofocus />
-            <small class="p-error" *ngIf="submitted && !product.name">Name is required.</small>
+            <small class="p-error" *ngIf="submitted && !persona.nombre">El Nombre es requerido.</small>
         </div>
         <div class="p-field">
-            <label for="description">Description</label>
-            <textarea id="description" pInputTextarea [(ngModel)]="product.description" required rows="3" cols="20"></textarea>
-        </div> -->
+            <label for="name">Apellido</label>
+            <input type="text" pInputText id="name" [(ngModel)]="persona.apellido" required autofocus />
+            <small class="p-error" *ngIf="submitted && !persona.nombre">El Apellido es requerido.</small>
+        </div>
         <!-- <div class="p-field">
-            <label for="inventoryStatus">Inventory Status</label>
-            <p-dropdown [(ngModel)]="product.inventoryStatus" inputId="inventoryStatus" [options]="statuses" placeholder="Select">
+            <label for="description">description</label>
+            <textarea id="description" pInputTextarea [(ngModel)]="persona.description" required rows="3" cols="20"></textarea>
+        </div> -->
+        <div class="p-field">
+            <label for="inventoryStatus">Tipo Persona</label>
+            <p-dropdown [(ngModel)]="persona.tipoPersona" inputId="inventoryStatus" [options]="statuses" placeholder="Seleccione un tipo">
                 <ng-template let-option pTemplate="item">
                     <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
                 </ng-template>
             </p-dropdown>
-        </div> -->
-
-        <!-- <div class="p-field">
-            <label class="p-mb-3">Category</label>
-            <div class="p-formgrid p-grid">
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category1" name="category" value="Accessories" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category1">Accessories</label>
-                </div>
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category2" name="category" value="Clothing" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category2">Clothing</label>
-                </div>
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category3" name="category" value="Electronics" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category3">Electronics</label>
-                </div>
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category4" name="category" value="Fitness" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category4">Fitness</label>
-                </div>
-            </div>
-        </div> -->
-
-        <!-- <div class="p-formgrid p-grid">
-            <div class="p-field p-col">
-                <label for="price">Price</label>
-                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="USD" locale="en-US"></p-inputNumber>
-            </div>
-            <div class="p-field p-col">
-                <label for="quantity">Quantity</label>
-                <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
-            </div>
-        </div> -->
+        </div>
+        <div class="p-field">
+            <label for="inventoryStatus">Tipo DNI</label>
+            <p-dropdown [(ngModel)]="persona.tipoPersona" inputId="inventoryStatus" [options]="tipoDni" placeholder="Seleccione un tipo de DNI">
+                <ng-template let-option pTemplate="item">
+                    <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
+                </ng-template>
+            </p-dropdown>
+        </div>
+        <div class="p-field">
+            <label for="name">DNI</label>
+            <input type="text" pInputText id="numeroDni" [(ngModel)]="persona.numeroDni" required autofocus />
+            <small class="p-error" *ngIf="submitted && !persona.codigoEstadistico">El número de DNI es requerido.</small>
+        </div>
+        <div class="p-field">
+            <label for="name">Código Estadistico</label>
+            <input type="text" pInputText id="codigoEstadictico" [(ngModel)]="persona.codigoEstadistico" required autofocus />
+            <small class="p-error" *ngIf="submitted && !persona.codigoEstadistico">El Código estadístico es requerido.</small>
+        </div>
+        <div class="p-field">
+            <label for="inventoryStatus">Jerarquia</label>
+            <p-dropdown [(ngModel)]="persona.jerarquia" inputId="jerarquia" [options]="jerarquia" placeholder="Select">
+                <ng-template let-option pTemplate="item">
+                    <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
+                </ng-template>
+            </p-dropdown>
+        </div>
+        <div class="p-field">
+            <label for="inventoryStatus">Destino Habitual</label>
+            <p-dropdown [(ngModel)]="persona.destinoHabitual" inputId="destinoHabitual" [options]="destino" placeholder="Select">
+                <ng-template let-option pTemplate="item">
+                    <span [class]="'product-badge status-' + option.value">{{option.label}}</span>
+                </ng-template>
+            </p-dropdown>
+        </div>        
     </ng-template>
 
     <ng-template pTemplate="footer">
-        <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
-        <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
+        <button pButton pRipple label="Cancelar" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+        <button pButton pRipple label="Guardar" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
     </ng-template>
 </p-dialog>
 
